@@ -1,5 +1,15 @@
 === HEAD
 
+* Fix disconnect detection in impala and rbhive adapters (jeremyevans)
+
+* Make implicit qualify return an SQL::Identifier if given an unqualified string (jeremyevans)
+
+* Fix :search_path option handling when using Sequel::SQL::AliasedExpressions (jeremyevans)
+
+* Speed up multi_insert and import (jeremyevans)
+
+* Add rbhive adapter (jeremyevans)
+
 * Add :empty_null=>:ruby option to csv_to_parquet extension, which can support quoted CSV cells (jeremyevans)
 
 * Optimize csv_to_parquet extension by not spawning shells or unnecessary processes (jeremyevans)
